# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

group("storage_service_fuzztest") {
  testonly = true
  deps = [
    # deps file
    "${storage_service_path}/test/fuzztest/bundlestats_fuzzer:BundleStatsFuzzTest",
    "${storage_service_path}/test/fuzztest/disk_fuzzer:DiskFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptodeleteuserkey_fuzzer:FileSystemCryptoDeleteUserKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptoupdateuserauth_fuzzer:FileSystemCryptoUpdateUserAuthFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptoactiveuserkey_fuzzer:FileSystemCryptoActiveUserKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptoinactiveuserkey_fuzzer:FileSystemCryptoInActiveUserKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptoupdatekeycontext_fuzzer:FileSystemCryptoUpdateKeyContextFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptolockuserscreen_fuzzer:FileSystemCryptoLockUserScreenFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptounlockuserscreen_fuzzer:FileSystemCryptoUnLockUserScreenFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptogetlockscreenstatus_fuzzer:FileSystemCryptoGetLockScreenStatusFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptogenerateappkey_fuzzer:FileSystemCryptoGenerateAppKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/filesystemcryptodeleteappkey_fuzzer:FileSystemCryptoDeleteAppKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/fileutils_fuzzer:FileUtilsFuzzTest",
    "${storage_service_path}/test/fuzztest/fscryptutils_fuzzer:FscryptUtilsFuzzTest",
    "${storage_service_path}/test/fuzztest/keycontrol_fuzzer:KeyControlFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidercheck_fuzzer:StorageDaemonProviderCheckFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidermount_fuzzer:StorageDaemonProviderMountFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderpartition_fuzzer:StorageDaemonProviderPartitionFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderqueryusbisinuse_fuzzer:StorageDaemonProviderQueryUsbIsInUseFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidercreatesharefile_fuzzer:StorageDaemonProviderCreateShareFileFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderdeletesharefile_fuzzer:StorageDaemonProviderDeleteShareFileFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderlockuserscreen_fuzzer:StorageDaemonProviderLockUserScreenFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderupdatememorypara_fuzzer:StorageDaemonProviderUpdateMemoryParaFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidershutdown_fuzzer:StorageDaemonProviderShutdownFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidercreaterecoverkey_fuzzer:StorageDaemonProviderCreateRecoverKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidersetrecoverkey_fuzzer:StorageDaemonProviderSetRecoverKeyFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonprovidermountmediafuse_fuzzer:StorageDaemonProviderMountMediaFuseFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproviderumountmediafuse_fuzzer:StorageDaemonProviderUMountMediaFuseFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonproxy_fuzzer:StorageDaemonProxyFuzzTest",
    "${storage_service_path}/test/fuzztest/storagedaemonstub_fuzzer:StorageDaemonStubFuzzTest",
    "${storage_service_path}/test/fuzztest/storagemanagerprovider_fuzzer:StorageManagerProviderFuzzTest",
    "${storage_service_path}/test/fuzztest/storagemanagerstub_fuzzer:StorageManagerStubFuzzTest",
    "${storage_service_path}/test/fuzztest/storagestats_fuzzer:StorageStatsFuzzTest",
    "${storage_service_path}/test/fuzztest/storagestatusservice_fuzzer:StorageStatusServiceFuzzTest",
    "${storage_service_path}/test/fuzztest/stringutils_fuzzer:StringUtilsFuzzTest",
    "${storage_service_path}/test/fuzztest/sysparamdynamic_fuzzer:SysparamDynamicFuzzTest",
    "${storage_service_path}/test/fuzztest/sysparamstatic_fuzzer:SysparamStaticFuzzTest",
    "${storage_service_path}/test/fuzztest/volumecore_fuzzer:VolumeCoreFuzzTest",
    "${storage_service_path}/test/fuzztest/volumeexternal_fuzzer:VolumeExternalFuzzTest",
  ]
  if (support_open_source_libmtp &&
      storage_service_external_storage_qos_trans) {
    deps +=
        [ "${storage_service_path}/test/fuzztest/libmtp_fuzzer:LibmtpFuzzTest" ]
  }
}
