# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-storageManager") {
  branch_protector_ret = "pac_ret"
  cli_config_file = "ohos-storageManager.json"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_enable = true
  install_images = [ "system" ]

  subsystem_name = "filemanagement"
  part_name = "storage_service"

  sources = [ "src/main.cpp" ]

  cflags = [
    "-fPIC",
    "-g",
  ]
  cflags += [ "-Wall" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags_cc = cflags

  include_dirs = [
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${root_gen_dir}/foundation/filemanagement/storage_service/interfaces/innerkits/storage_manager/native",
    "${storage_manager_path}/include",
    "${storage_manager_path}/include/client",
    "${storage_manager_path}/include/ipc",
    "${storage_service_path}/services/storage_daemon/include",
    "${storage_service_common_path}/include",
    "${storage_interface_path}/kits/js/storage_manager/include",
  ]

  defines = [
    "STORAGE_LOG_TAG=\"OhosStorageManager\"",
    "LOG_DOMAIN=0xD004300",
  ]

  deps = [
    "${storage_interface_path}/innerkits/storage_manager/native:storage_manager_sa_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_prebuilt_etc("ohos_storageManager_config") {
  source = "ohos-storageManager.json"
  relative_install_dir = "../bin/cli_tool/configs"
  part_name = "storage_service"
  subsystem_name = "filemanagement"
}